--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,6 @@
 file.reference.swoole-library=../library
 include.path=\
-    ${php.global.include.path}:\
-    ${file.reference.swoole-library}
+    ${php.global.include.path}
 php.version=PHP_82
 source.encoding=UTF-8
 src.dir=.
