Ajustes para rodar em docker.

--- a/container/nginx/nginx.conf
+++ b/container/nginx/nginx.conf
@@ -15,17 +15,14 @@ http {
     }
 
     server {
-        listen       80 backlog=700;
-        listen  [::]:80 backlog=700;
+        listen       80;
+        listen  [::]:80; 
         server_name  localhost;
 
 #        access_log off;
 
         location / {
-            fastcgi_pass   api;
-            fastcgi_index  index.php;
-            fastcgi_param  SCRIPT_FILENAME  /var/www/html/index.php;
-            include        fastcgi_params;
+            proxy_pass http://api;
         }
     }
 }
