Ajuste para pegar imagem do docker hub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ volumes:
 services:
 
   app01: &app
-    image: swoole/postgres
+    image: shenkimaro/swoole-postgres
     hostname: app01
     networks:
       rede_app:
